HTML background on mobile too, timerview stop updateclock on change event and not found

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,6 +62,11 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
+  background: url(../Content/img/homepage_bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 body {
   margin: 0;
@@ -651,17 +656,6 @@ ul.ui-autocomplete.ui-menu li div {
 }
 // Timer page
 // --------------------------------------------------
-.timer_content {
-  background: url(../Content/img/homepage_bg.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  position: relative;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-   background-size: cover;
-}
 .event_time_left_prefix {
   font-size: 30px;
   font-family: "Moon Light";
@@ -790,13 +784,6 @@ ul.ui-autocomplete.ui-menu li div {
 @media (min-width: 768px) {
   // >= 768px Common HTML elements
   // --------------------------------------------------
-  html {
-    background: url(../Content/img/homepage_bg.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-  }
   body {
     height: calc(100% - 25px);
   }
@@ -1017,8 +1004,4 @@ ul.ui-autocomplete.ui-menu li div {
   
   // >= 768px Timer page
   // --------------------------------------------------
-  .timer_content {
-    position: absolute;
-    background: none;
-  }
 }
